--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "setup": "node scripts/setup-environment.js",
+    "health": "curl http://localhost:3000/api/health",
+    "health:detailed": "curl http://localhost:3000/api/health?detailed=true"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -52,7 +55,7 @@
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "14.2.16",
+    "next": "^15.0.0",
     "next-themes": "latest",
     "react": "^18",
     "react-day-picker": "9.8.0",
