--- a/package.json
+++ b/package.json
@@ -9,7 +9,19 @@
     "start": "next start",
     "setup": "node scripts/setup-environment.js",
     "health": "curl http://localhost:3000/api/health",
-    "health:detailed": "curl http://localhost:3000/api/health?detailed=true"
+    "health:detailed": "curl http://localhost:3000/api/health?detailed=true",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:all": "npm run test && npm run test:e2e",
+    "test:comprehensive": "node tests/run-comprehensive-tests.js",
+    "test:unit": "jest --testPathPattern=unit",
+    "test:integration": "jest --testPathPattern=integration",
+    "test:api": "jest --testPathPattern=api",
+    "test:performance": "jest --testPathPattern=performance",
+    "test:security": "jest --testPathPattern=security"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -77,6 +89,13 @@
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@playwright/test": "^1.40.0",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^29.5.8",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
