--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "test:coverage": "jest --coverage",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
-    "test:all": "npm run test && npm run test:e2e",
+    "test:all": "pnpm test && pnpm test:e2e",
     "test:comprehensive": "node tests/run-comprehensive-tests.js",
     "test:unit": "jest --testPathPattern=unit",
     "test:integration": "jest --testPathPattern=integration",
-    "test:api": "jest --testPathPattern=api",
+    "test:api": "jest --config jest.config.api.js --testPathPattern=api",
+    "test:api:unit": "jest --config jest.config.api.js --testPathPattern=unit/api",
+    "test:api:integration": "jest --config jest.config.api.js --testPathPattern=integration/api",
     "test:performance": "jest --testPathPattern=performance",
     "test:security": "jest --testPathPattern=security"
   },
@@ -85,17 +87,19 @@
     "zod": "3.25.67"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.9",
-    "@types/node": "^22",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
     "@playwright/test": "^1.40.0",
+    "@tailwindcss/postcss": "^4.1.9",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
     "@types/jest": "^29.5.8",
+    "@types/node": "^22",
+    "@types/node-fetch": "2",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "node-fetch": "2",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
