--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "@types/react-dom": "^18",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "node-fetch": "2",
+    "node-fetch": "^2.7.0",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
