--- a/package.json
+++ b/package.json
@@ -8,6 +8,14 @@
     "lint": "next lint",
     "start": "next start",
     "setup": "node scripts/setup-environment.js",
+    "setup:multi-sport": "node scripts/setup-robust-multi-sport.js",
+    "setup:database": "node scripts/setup-database-multi-sport.js",
+    "populate:data": "node scripts/populate-multi-sport-data.js",
+    "start:updates": "pm2 start scripts/auto-update-service.js --name apexbets-updates",
+    "stop:updates": "pm2 stop apexbets-updates",
+    "start:live-data": "node scripts/live-data-service.js",
+    "test:robustness": "node scripts/test-multi-sport-robustness.js",
+    "test:mock-data": "node scripts/verify-no-mock-data.js",
     "health": "curl http://localhost:3000/api/health",
     "health:detailed": "curl http://localhost:3000/api/health?detailed=true",
     "test": "jest",
@@ -23,7 +31,10 @@
     "test:api:unit": "jest --config jest.config.api.js --testPathPattern=unit/api",
     "test:api:integration": "jest --config jest.config.api.js --testPathPattern=integration/api",
     "test:performance": "jest --testPathPattern=performance",
-    "test:security": "jest --testPathPattern=security"
+    "test:security": "jest --testPathPattern=security",
+    "update-data": "node scripts/auto-update-service.js",
+    "start-updates": "pm2 start scripts/auto-update-service.js --name apexbets-updates",
+    "stop-updates": "pm2 stop apexbets-updates"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -100,6 +111,10 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "node-fetch": "^2.7.0",
+    "node-cron": "^3.0.3",
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "pm2": "^5.3.0",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
