--- a/package.json
+++ b/package.json
@@ -10,31 +10,21 @@
     "setup": "node scripts/setup-environment.js",
     "setup:multi-sport": "node scripts/setup-robust-multi-sport.js",
     "setup:database": "node scripts/setup-database-multi-sport.js",
-    "populate:data": "node scripts/populate-multi-sport-data.js",
+    "populate:data": "node scripts/populate-real-sports-data.js",
     "start:updates": "pm2 start scripts/auto-update-service.js --name apexbets-updates",
     "stop:updates": "pm2 stop apexbets-updates",
     "start:live-data": "node scripts/live-data-service.js",
-    "test:robustness": "node scripts/test-multi-sport-robustness.js",
-    "test:mock-data": "node scripts/verify-no-mock-data.js",
     "health": "curl http://localhost:3000/api/health",
     "health:detailed": "curl http://localhost:3000/api/health?detailed=true",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:e2e": "playwright test",
-    "test:e2e:ui": "playwright test --ui",
-    "test:all": "pnpm test && pnpm test:e2e",
-    "test:comprehensive": "node tests/run-comprehensive-tests.js",
-    "test:unit": "jest --testPathPattern=unit",
-    "test:integration": "jest --testPathPattern=integration",
-    "test:api": "jest --config jest.config.api.js --testPathPattern=api",
-    "test:api:unit": "jest --config jest.config.api.js --testPathPattern=unit/api",
-    "test:api:integration": "jest --config jest.config.api.js --testPathPattern=integration/api",
-    "test:performance": "jest --testPathPattern=performance",
-    "test:security": "jest --testPathPattern=security",
-    "update-data": "node scripts/auto-update-service.js",
-    "start-updates": "pm2 start scripts/auto-update-service.js --name apexbets-updates",
-    "stop-updates": "pm2 stop apexbets-updates"
+    "test": "node tests/test-runner.js all",
+    "test:unit": "node tests/test-runner.js unit",
+    "test:integration": "node tests/test-runner.js integration",
+    "test:e2e": "node tests/test-runner.js e2e",
+    "test:performance": "node tests/test-runner.js performance",
+    "test:security": "node tests/test-runner.js security",
+    "test:watch": "jest --config tests/jest.config.js --watch",
+    "test:coverage": "jest --config tests/jest.config.js --coverage",
+    "test:e2e:ui": "playwright test --ui"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -65,10 +55,8 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
-    "@remix-run/react": "latest",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
-    "@sveltejs/kit": "latest",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -89,12 +77,9 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "latest",
     "sonner": "^1.7.4",
-    "svelte": "latest",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
-    "vue": "latest",
-    "vue-router": "latest",
     "zod": "3.25.67"
   },
   "devDependencies": {
@@ -108,15 +93,16 @@
     "@types/node-fetch": "2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "node-fetch": "^2.7.0",
     "node-cron": "^3.0.3",
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
+    "node-fetch": "^2.7.0",
     "pm2": "^5.3.0",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
+    "ts-jest": "^29.4.1",
     "tw-animate-css": "1.3.3",
     "typescript": "^5"
   }
