Centralizing and api fixes

--- a/env.example
+++ b/env.example
@@ -12,8 +12,9 @@ NEXT_PUBLIC_ODDS_API_KEY=your_odds_api_key
 # For premium ($9/month): replace with your premium key
 NEXT_PUBLIC_SPORTSDB_API_KEY=123
 
-# Optional: Additional API Keys (no keys needed)
-# BALLDONTLIE is completely free, no API key required
+# BALLDONTLIE API (Free tier: 5 requests per minute)
+# Get your free API key at: https://www.balldontlie.io/
+NEXT_PUBLIC_BALLDONTLIE_API_KEY=your_balldontlie_api_key
 
 # App Configuration
 NEXT_PUBLIC_API_URL=/api
