--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^13.0.0",
     "vaul": "^0.9.9",
     "zod": "3.25.67"
   },
@@ -99,6 +100,7 @@
     "@types/node-fetch": "2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jest": "^29.7.0",
