--- a/env.example
+++ b/env.example
@@ -1,20 +1,24 @@
-# Database
-NEXT_PUBLIC_SUPABASE_URL=your_supabase_url
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
-SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
+# Database Configuration
+# Get these values from your Supabase project dashboard
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
 
-# Sports APIs
-NEXT_PUBLIC_RAPIDAPI_KEY=your_rapidapi_key
-NEXT_PUBLIC_ODDS_API_KEY=your_odds_api_key
+# Sports APIs Configuration
+# RapidAPI: https://rapidapi.com/hub
+NEXT_PUBLIC_RAPIDAPI_KEY=your_rapidapi_key_here
+
+# Odds API: https://the-odds-api.com/
+NEXT_PUBLIC_ODDS_API_KEY=your_odds_api_key_here
 
 # TheSportsDB (Free API - uses '123' as default key)
-# For free tier: leave as '123' (no registration needed)
-# For premium ($9/month): replace with your premium key
+# Free tier: leave as '123' (no registration needed)
+# Premium ($9/month): replace with your premium key
 NEXT_PUBLIC_SPORTSDB_API_KEY=123
 
-# BALLDONTLIE API (Free tier: 5 requests per minute)
+# BallDontLie API (Free tier: 5 requests per minute)
 # Get your free API key at: https://www.balldontlie.io/
-NEXT_PUBLIC_BALLDONTLIE_API_KEY=your_balldontlie_api_key
+NEXT_PUBLIC_BALLDONTLIE_API_KEY=your_balldontlie_api_key_here
 
 # App Configuration
 NEXT_PUBLIC_API_URL=/api
@@ -25,3 +29,38 @@ NEXT_PUBLIC_APP_VERSION=1.0.0
 NEXT_PUBLIC_ENABLE_LIVE_UPDATES=true
 NEXT_PUBLIC_ENABLE_VALUE_BETTING=true
 NEXT_PUBLIC_ENABLE_ML_PREDICTIONS=true
+
+# Rate Limiting Configuration (per sport)
+BASKETBALL_RATE_LIMIT_MINUTE=100
+BASKETBALL_RATE_LIMIT_HOUR=1000
+BASKETBALL_RATE_LIMIT_DAY=10000
+BASKETBALL_BURST_LIMIT=10
+BASKETBALL_UPDATE_FREQUENCY=15
+
+FOOTBALL_RATE_LIMIT_MINUTE=30
+FOOTBALL_RATE_LIMIT_HOUR=500
+FOOTBALL_RATE_LIMIT_DAY=5000
+FOOTBALL_BURST_LIMIT=5
+FOOTBALL_UPDATE_FREQUENCY=30
+
+BASEBALL_RATE_LIMIT_MINUTE=60
+BASEBALL_RATE_LIMIT_HOUR=1000
+BASEBALL_RATE_LIMIT_DAY=10000
+BASEBALL_BURST_LIMIT=8
+BASEBALL_UPDATE_FREQUENCY=60
+
+HOCKEY_RATE_LIMIT_MINUTE=40
+HOCKEY_RATE_LIMIT_HOUR=800
+HOCKEY_RATE_LIMIT_DAY=8000
+HOCKEY_BURST_LIMIT=6
+HOCKEY_UPDATE_FREQUENCY=30
+
+SOCCER_RATE_LIMIT_MINUTE=50
+SOCCER_RATE_LIMIT_HOUR=1000
+SOCCER_RATE_LIMIT_DAY=10000
+SOCCER_BURST_LIMIT=7
+SOCCER_UPDATE_FREQUENCY=60
+
+# Season Configuration
+DEFAULT_SEASON_START_MONTH=8
+SEASON_HISTORY_YEARS=3
