--- a/env.example
+++ b/env.example
@@ -25,6 +25,9 @@ NEXT_PUBLIC_API_URL=/api
 NEXT_PUBLIC_APP_NAME=ApexBets
 NEXT_PUBLIC_APP_VERSION=1.0.0
 
+# Supported Sports (comma-separated list)
+SUPPORTED_SPORTS=basketball,soccer,football,baseball,hockey
+
 # Feature Flags
 NEXT_PUBLIC_ENABLE_LIVE_UPDATES=true
 NEXT_PUBLIC_ENABLE_VALUE_BETTING=true
