--- a/env.example
+++ b/env.example
@@ -4,6 +4,10 @@ NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
 SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
 
+# MCP Server Configuration
+MCP_SERVER_URL=http://localhost:3002
+MCP_SERVER_PORT=3002
+
 # Sports APIs Configuration
 # RapidAPI: https://rapidapi.com/hub
 NEXT_PUBLIC_RAPIDAPI_KEY=your_rapidapi_key_here
