--- a/.env.example
+++ b/.env.example
@@ -1,94 +1,36 @@
-# Project Apex Environment Configuration Template
-# Copy this file to .env.local and fill in your actual values
+# ApexBets Environment Configuration
+# Copy this file to .env.local and fill in your values
 
-# =============================================================================
-# DATABASE CONFIGURATION (REQUIRED)
-# =============================================================================
-# Get these from your Supabase project settings
-NEXT_PUBLIC_SUPABASE_URL=https://your-project-id.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
-SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
+# Database
+NEXT_PUBLIC_SUPABASE_URL=your_supabase_url
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 
-# =============================================================================
-# SPORTS APIs (OPTIONAL BUT RECOMMENDED)
-# =============================================================================
-
-# RapidAPI (API-SPORTS) - Fast real-time sports data
-# Sign up at: https://rapidapi.com/api-sports/api/api-sports
-# Limits: 100 requests/minute, 10,000 requests/day
-# Supports multiple keys separated by commas for automatic rotation
-NEXT_PUBLIC_RAPIDAPI_KEY=your_rapidapi_key_here,backup_key_1,backup_key_2
-
-# The Odds API - Betting odds and live sports data
-# Sign up at: https://the-odds-api.com/
-# Limits: 10 requests/minute, 100 requests/day (free tier)
-# Supports multiple keys separated by commas for automatic rotation
-NEXT_PUBLIC_ODDS_API_KEY=your_odds_api_key_here,backup_key_1,backup_key_2
-
-# TheSportsDB - Free multi-sport API
-# For free tier: leave as '123' (no registration needed)
-# For premium ($9/month): replace with your premium key
-# URL: https://www.thesportsdb.com/
+# Sports APIs
+NEXT_PUBLIC_RAPIDAPI_KEY=your_rapidapi_key
+NEXT_PUBLIC_ODDS_API_KEY=your_odds_api_key
 NEXT_PUBLIC_SPORTSDB_API_KEY=123
+NEXT_PUBLIC_BALLDONTLIE_API_KEY=your_balldontlie_key
 
-# BALLDONTLIE - NBA, NFL, MLB, NHL, EPL API (API key required)
-# Sign up at: https://www.balldontlie.io/
-# Limits: Free tier available with API key required
-NEXT_PUBLIC_BALLDONTLIE_API_KEY=your_balldontlie_api_key_here
+# Security
+WEBHOOK_SECRET=your_webhook_secret
 
-# =============================================================================
-# SECURITY CONFIGURATION
-# =============================================================================
-# Webhook HMAC secret for secure webhook authentication
-# Generate a strong random string (minimum 32 characters)
-# Example: openssl rand -hex 32
-WEBHOOK_SECRET=your_webhook_secret_here_minimum_32_characters_required
-
-# Optional: Comma-separated list of allowed IP addresses for webhooks
-# Leave empty to allow all IPs (not recommended for production)
-# WEBHOOK_ALLOWED_IPS=192.168.1.1,10.0.0.1,203.0.113.1
-
-# Optional: Require HMAC signature validation (default: true)
-# WEBHOOK_REQUIRE_SIGNATURE=true
-
-# Optional: Custom signature header name (default: x-hub-signature-256)
-# WEBHOOK_SIGNATURE_HEADER=x-hub-signature-256
-
-# =============================================================================
-# APPLICATION CONFIGURATION
-# =============================================================================
-NEXT_PUBLIC_API_URL=http://localhost:3000/api
-NEXT_PUBLIC_APP_NAME=Project Apex
+# App Configuration
+NEXT_PUBLIC_API_URL=/api
+NEXT_PUBLIC_APP_NAME=ApexBets
 NEXT_PUBLIC_APP_VERSION=1.0.0
 
-# =============================================================================
-# FEATURE FLAGS
-# =============================================================================
+# Feature Flags
 NEXT_PUBLIC_ENABLE_LIVE_UPDATES=true
 NEXT_PUBLIC_ENABLE_VALUE_BETTING=true
 NEXT_PUBLIC_ENABLE_ML_PREDICTIONS=true
 
-# =============================================================================
-# DEVELOPMENT/PRODUCTION SETTINGS
-# =============================================================================
-NODE_ENV=development
-NEXT_PUBLIC_VERCEL_URL=your-domain.vercel.app
+# Rate Limiting
+RATE_LIMIT_ENABLED=true
+RATE_LIMIT_WINDOW_MS=60000
+RATE_LIMIT_MAX_REQUESTS=100
 
-# =============================================================================
-# OPTIONAL: ANALYTICS & MONITORING
-# =============================================================================
-# Vercel Analytics (if deploying to Vercel)
-# NEXT_PUBLIC_VERCEL_ANALYTICS_ID=your_analytics_id
-
-# =============================================================================
-# SETUP INSTRUCTIONS
-# =============================================================================
-# 1. Copy this file: cp .env.example .env.local
-# 2. Sign up for Supabase at https://supabase.com
-# 3. Create a new project and get your keys from Settings > API
-# 4. (Optional) Sign up for sports APIs to get enhanced data
-# 5. Run setup script: npm run setup
-# 6. Start development: npm run dev
-#
-# For detailed setup instructions, see README.md#
-# For detailed setup instructions, see README.md
+# Caching
+CACHE_ENABLED=true
+CACHE_TTL_MS=300000
+DATABASE_CACHE_ENABLED=true
