--- a/supabase/functions/sync-sports-data/deno.json
+++ b/supabase/functions/sync-sports-data/deno.json
@@ -1,5 +1,19 @@
 {
   "imports": {
     "supabase": "https://esm.sh/@supabase/supabase-js@2"
+  },
+  "compilerOptions": {
+    "lib": ["es2022", "dom"],
+    "strict": true,
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": false,
+    "target": "ES2022",
+    "module": "ESNext"
   }
 }
