--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "type": "git",
     "url": "https://github.com/projectapex/apex.git"
   },
-  "packageManager": "pnpm@8.0.0",
+  "packageManager": "pnpm@9.15.9",
   "engines": {
     "node": ">=18.0.0",
-    "pnpm": ">=8.0.0"
+    "pnpm": ">=9.0.0"
   },
   "scripts": {
     "dev": "pnpm run build:server && node server.js",
@@ -87,8 +87,8 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
-    "@supabase/ssr": "latest",
-    "@supabase/supabase-js": "latest",
+    "@supabase/ssr": "^0.5.1",
+    "@supabase/supabase-js": "^2.45.4",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
