--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "private": true,
   "author": "Project Apex Team",
   "license": "MIT",
-  "keywords": ["sports analytics", "betting", "machine learning", "predictions", "next.js"],
+  "keywords": [
+    "sports analytics",
+    "betting",
+    "machine learning",
+    "predictions",
+    "next.js"
+  ],
   "homepage": "https://github.com/projectapex/apex",
   "repository": {
     "type": "git",
@@ -15,6 +21,14 @@
   "engines": {
     "node": ">=18.0.0",
     "pnpm": ">=9.0.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "@typescript-eslint/parser": "8.44.1",
+      "@typescript-eslint/eslint-plugin": "8.44.1",
+      "@typescript-eslint/utils": "8.44.1",
+      "@typescript-eslint/type-utils": "8.44.1"
+    }
   },
   "scripts": {
     "dev": "pnpm run build:server && node server.js",
@@ -87,62 +101,62 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
-    "@supabase/ssr": "^0.5.1",
-    "@supabase/supabase-js": "^2.45.4",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.57.4",
     "@vercel/analytics": "latest",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "latest",
     "dotenv": "^17.2.2",
     "embla-carousel-react": "8.5.1",
-    "geist": "^1.3.1",
+    "geist": "^1.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "^15.0.0",
     "next-themes": "latest",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-day-picker": "9.8.0",
-    "react-dom": "^18",
-    "react-hook-form": "^7.60.0",
-    "react-resizable-panels": "^2.1.7",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.63.0",
+    "react-resizable-panels": "^2.1.9",
     "recharts": "latest",
     "sonner": "^1.7.4",
-    "tailwind-merge": "^2.5.5",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^13.0.0",
     "vaul": "^0.9.9",
     "zod": "3.25.67"
   },
   "devDependencies": {
-    "@playwright/test": "^1.40.0",
-    "@tailwindcss/postcss": "^4.1.9",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/user-event": "^14.5.1",
-    "@types/jest": "^29.5.8",
-    "@types/node": "^22",
-    "@types/node-fetch": "2",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@playwright/test": "^1.55.1",
+    "@tailwindcss/postcss": "^4.1.13",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^14.3.1",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.18.6",
+    "@types/node-fetch": "^2.6.13",
+    "@types/react": "^18.3.24",
+    "@types/react-dom": "^18.3.7",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.0.0",
-    "@typescript-eslint/parser": "^7.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.44.1",
+    "@typescript-eslint/parser": "^8.44.1",
     "cors": "^2.8.5",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^15.0.0",
-    "express": "^4.18.2",
+    "eslint": "^9.36.0",
+    "eslint-config-next": "^15.5.3",
+    "express": "^4.21.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "next": "^15.5.3",
     "node-cron": "^3.0.3",
     "node-fetch": "^2.7.0",
-    "pm2": "^5.3.0",
-    "postcss": "^8.5",
-    "prettier": "^3.0.0",
-    "tailwindcss": "^4.1.9",
-    "ts-jest": "^29.4.1",
-    "tw-animate-css": "1.3.3",
-    "typescript": "^5"
+    "pm2": "^5.4.3",
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "tailwindcss": "^4.1.13",
+    "ts-jest": "^29.4.4",
+    "tw-animate-css": "1.3.8",
+    "typescript": "^5.9.2"
   }
 }
