Update configuration files for improved Vercel deployment and package management
- Refined .npmrc settings to enforce strict package management and enhance CI/CD processes.
- Updated pnpm-lock.yaml to include new dependencies and ensure consistent package versions.
- Enhanced vercel.json with specific build and install commands for better deployment handling.
- Refactored API routes to improve data handling and ensure compatibility with updated configurations.

--- a/.npmrc
+++ b/.npmrc
@@ -1,20 +1,26 @@
-# ApexBets Package Manager Configuration
-# This project uses pnpm as the package manager
+# PNPM Configuration for Vercel Deployment
+# Ensure consistent package manager behavior
 
-# Use pnpm for all package operations
-package-manager=pnpm
+# Use pnpm version 9.x
+package-manager-strict=true
 
-# Disable npm warnings about using pnpm
-engine-strict=true
+# Enable frozen lockfile for CI/CD
+frozen-lockfile=true
 
-# Use strict peer dependencies
+# Auto install peer dependencies
+auto-install-peers=true
+
+# Use exact versions for better reproducibility
+save-exact=false
+
+# Enable strict peer dependencies
 strict-peer-dependencies=false
 
-# Use pnpm's node_modules structure - use 'hoisted' for Windows compatibility
-node-linker=hoisted
+# Use the same registry as package.json
+registry=https://registry.npmjs.org/
 
-# Enable pnpm's strict mode for better dependency management
-strict-peer-dependencies=false
+# Enable hoisting for better performance
+hoist=true
 
-# Windows-specific settings
-symlink=false
+# Disable shamefully-hoist to avoid conflicts
+shamefully-hoist=false
