--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,19 @@
   "version": 2,
   "env": {
     "NODE_ENV": "production"
-  }
+  },
+  "buildCommand": "pnpm install --frozen-lockfile && pnpm run build",
+  "installCommand": "pnpm install --frozen-lockfile",
+  "framework": "nextjs",
+  "functions": {
+    "app/api/**/*.ts": {
+      "runtime": "nodejs18.x"
+    }
+  },
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/next"
+    }
+  ]
 }
