Update configuration for dependency management and Vercel deployment
- Modified .npmrc to disable frozen lockfile for CI/CD, allowing for dependency updates.
- Adjusted vercel.json to reflect the new install and build commands without frozen lockfile.
- Updated pnpm-lock.yaml to ensure consistent package versions and include new dependencies.
- Refactored useApiData hook to improve debounce functionality for API calls.

--- a/.npmrc
+++ b/.npmrc
@@ -4,8 +4,8 @@
 # Use pnpm version 9.x
 package-manager-strict=true
 
-# Enable frozen lockfile for CI/CD
-frozen-lockfile=true
+# Disable frozen lockfile for CI/CD to handle dependency updates
+frozen-lockfile=false
 
 # Auto install peer dependencies
 auto-install-peers=true
