--- a/vercel.json
+++ b/vercel.json
@@ -3,18 +3,12 @@
   "env": {
     "NODE_ENV": "production"
   },
-  "buildCommand": "pnpm install --frozen-lockfile && pnpm run build",
-  "installCommand": "pnpm install --frozen-lockfile",
+  "buildCommand": "pnpm install --no-frozen-lockfile && pnpm run build",
+  "installCommand": "pnpm install --no-frozen-lockfile",
   "framework": "nextjs",
   "functions": {
     "app/api/**/*.ts": {
       "runtime": "nodejs18.x"
     }
-  },
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/next"
-    }
-  ]
+  }
 }
