--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   },
   "packageManager": "pnpm@9.15.9",
   "engines": {
-    "node": ">=18.0.0",
-    "pnpm": ">=9.0.0"
+    "node": "18.x",
+    "pnpm": "9.15.9"
   },
   "pnpm": {
     "overrides": {
@@ -118,7 +118,17 @@
     "next": "^15.5.3",
     "next-themes": "latest",
     "eslint-config-next": "^15.5.3",
+    "@tailwindcss/postcss": "^4.1.13",
+    "tailwindcss": "^4.1.13",
+    "@types/react": "^18.3.24",
+    "@types/react-dom": "^18.3.7",
+    "@types/node": "^22.18.6",
+    "postcss": "^8.5.6",
+    "eslint": "^9.36.0",
+    "@typescript-eslint/eslint-plugin": "^8.44.1",
+    "@typescript-eslint/parser": "^8.44.1",
     "react": "^18.3.1",
+    "tw-animate-css": "1.3.8",
     "react-day-picker": "9.8.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.63.0",
@@ -138,26 +148,16 @@
     "@testing-library/react": "^14.3.1",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.18.6",
     "@types/node-fetch": "^2.6.13",
-    "@types/react": "^18.3.24",
-    "@types/react-dom": "^18.3.7",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.44.1",
-    "@typescript-eslint/parser": "^8.44.1",
     "cors": "^2.8.5",
-    "eslint": "^9.36.0",
     "express": "^4.21.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "node-cron": "^3.0.3",
     "node-fetch": "^2.7.0",
     "pm2": "^5.4.3",
-    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
-    "tailwindcss": "^4.1.13",
-    "ts-jest": "^29.4.4",
-    "tw-animate-css": "1.3.8",
-    "typescript": "^5.9.2"
+    "ts-jest": "^29.4.4"
   }
 }
