--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "packageManager": "pnpm@9.15.9",
   "engines": {
-    "node": "18.x",
+    "node": "22",
     "pnpm": "9.15.9"
   },
   "pnpm": {
