--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "eslint-config-next": "^15.5.3",
     "geist": "^1.5.1",
     "input-otp": "1.4.1",
+    "ioredis": "^5.8.0",
     "lucide-react": "^0.454.0",
     "next": "^15.5.3",
     "next-themes": "latest",
