Remove deprecated files and update API alert route for user authentication
- Deleted obsolete documentation and setup files to streamline the codebase.
- Updated the API alert route to include user authentication, ensuring only authorized users can create alerts.

--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
     }
   },
   "scripts": {
-    "dev": "pnpm run build:server && node server.js",
+    "dev": "next dev",
     "dev:next": "next dev",
     "build": "next build",
-    "build:server": "tsc -p tsconfig.server.json && powershell -Command \"Copy-Item startup.config.json dist/server/\"",
-    "build:all": "pnpm run build:server && pnpm run build",
-    "start": "pnpm run build:server && node server.js",
+    "build:server": "echo skip legacy server build",
+    "build:all": "pnpm run build",
+    "start": "next start",
     "start:next": "next start",
     "lint": "next lint --fix",
     "type-check": "tsc --noEmit",
@@ -63,12 +63,12 @@
     "mcp:dev": "nodemon supabase-mcp-server.js",
     "mcp:test": "node test-mcp-server.js",
     "mcp:setup": "node scripts/setup/setup-mcp-database.js",
-    "startup:status": "curl http://localhost:3000/api/startup?action=status",
-    "startup:health": "curl http://localhost:3000/api/startup?action=health",
-    "startup:restart": "curl -X GET http://localhost:3000/api/startup?action=restart",
-    "startup:stop": "curl -X GET http://localhost:3000/api/startup?action=stop",
-    "sync:data": "pnpm run build:server && node scripts/sync-sports-data.js",
-    "sync:test": "pnpm run build:server && node scripts/sync-sports-data.js",
+    "startup:status": "echo startup route removed",
+    "startup:health": "echo startup route removed",
+    "startup:restart": "echo startup route removed",
+    "startup:stop": "echo startup route removed",
+    "sync:data": "echo use Supabase Edge Function instead",
+    "sync:test": "echo use Supabase Edge Function instead",
     "deploy:edge-function": "node scripts/deploy-edge-function.js",
     "test:system": "node scripts/test-complete-system.js"
   },
@@ -153,7 +153,6 @@
     "express": "^4.21.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "node-cron": "^3.0.3",
     "node-fetch": "^2.7.0",
     "pm2": "^5.4.3",
     "prettier": "^3.6.2",
