--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "react-day-picker": "9.8.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.63.0",
+    "react-masonry-css": "^1.0.16",
     "react-resizable-panels": "^2.1.9",
     "recharts": "latest",
     "sonner": "^1.7.4",
@@ -140,6 +141,9 @@
     "zod": "3.25.67"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.4",
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-typescript": "^7.27.1",
     "@playwright/test": "^1.55.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^14.3.1",
@@ -147,7 +151,9 @@
     "@types/jest": "^29.5.14",
     "@types/node-fetch": "^2.6.13",
     "@types/uuid": "^10.0.0",
+    "babel-jest": "^30.2.0",
     "cors": "^2.8.5",
+    "cross-env": "^10.1.0",
     "express": "^4.21.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
